--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>Davide Diaconu</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="icon.ico" />
+    <meta name="description" content="Frontend Developer" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
     <app-root></app-root>
